@@ -8,6 +8,7 @@ copyright_year   = 2010
 
 [Prereqs]
 Git::Wrapper = 0.014
+MouseX::NativeTraits = 0
 Term::ReadLine::Perl = 0
 
 [Prereqs / RuntimeRecommends]
